# puretorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  compile_flags.txt  conf.py  index.rst  pyproject.toml  pytest.ini  remove__init__.py  requirements.txt  setup.py
autograd/: __init__.py  context.py  function.py  grad_mode.py  ops.py  variable.py
autograd/cpp/: context.hpp  test  variable.cpp  variable.hpp
autograd/cpp/ops/: add.hpp  function.hpp  mul.hpp
autograd/ops/: __init__.py  add.py  div.py  log.py  mean.py  variable_sum.py
autograd/python/: __init__.py  context.py  function.py  grad_mode.py  ops.py  variable.py
autograd/python/ops/: __init__.py  add.py  context.py  div.py  exp.py  function.py  log.py  matmul.py  mean.py  mul.py  neg.py  ops.py  pow.py  relu.py  reshape.py  sub.py  transpose.py  variable_sum.py
docs/: autograd.rst  conf.py  puretorch.nn.rst  puretorch.rst
docs/_build/doctrees/: autograd.doctree  conf.doctree  environment.pickle  index.doctree  modules.doctree  puretorch.autograd.doctree  puretorch.doctree  puretorch.nn.doctree  puretorch.optim.doctree  puretorch.puretorch.doctree  puretorch.puretorch.nn.doctree  puretorch.puretorch.optim.doctree  puretorch.tests.doctree  setup.doctree  tests.doctree
linalg/: README.md  array.hpp
puretorch/: __init__.py  device.py  dtype.py  function.py  tensor.py
puretorch/nn/: __init__.py  functional.py  linear.py  module.py  parameter.py  relu.py  sequential.py  softmax.py  tanh.py  utils.py
puretorch/ops/: exp.py  index.py  matmul.py  mul.py  neg.py  pow.py  reshape.py  sub.py  transpose.py
puretorch/optim/: __init__.py  muon.py  optimizer.py  sgd.py
puretorch/utils/: tensor_utils.py  viz.py
puretorchinfo/: summary.py
tests/: autograd_tests.py  tensor_tests.py
(+57 files in other folders)
