project-includes = [
    "autograd",
    "puretorch",
]

project-excludes = [
    "dev_notebooks"
]

[build-system]
requires = [
    "setuptools >= 72",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool]

[tool.pyrefly]
project-includes = [
    "autograd",
    "puretorch",
]

#[tool.ruff]
#    line-length = 80

